# chess

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: board.cpp  board.h  game.cpp  game.h  main.cpp  move-indicator.cpp  move-indicator.h  piece.cpp  piece.h  pieces.h
